# rust-s3-scylla

./: .env.example  Cargo.toml  Dockerfile  Makefile  README.md  config.json  config.toml  docker-compose.yml
sample/: example1.json  example2.json  example3.json  example4.json  example5.json
schema/: ddl.sql
src/: ingest.rs  main.rs
src/app_config/: mod.rs
src/aws/: s3.rs
src/config/: mod.rs
src/data/: mod.rs  source_model.rs
src/db/: scylladb.rs
src/service/: local.rs  mod.rs  s3.rs
