[package]
name = "rust-s3-scylla"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
config = "0.11"
env_logger = "0.10.1"
anyhow = "1.0.79"
aws-sdk-s3 = "1.11.0"
aws-config = "1.1.1"
axum = { version = "0.7.3", features = ["macros"] }
tokio = { version = "1.35.1", features = ["full"] }
log = "0.4.20"
scylla = "0.11.1"
uuid = { version = "1.6.1", features = ["v4"] }
